function(aeronet_http_test NAME)
	set(TGT ${NAME}_test)
	AeronetAddProjectExecutable(${TGT} ${TGT}.cpp ${ARGN})
	target_link_libraries(${TGT} PRIVATE aeronet aeronet_test_support GTest::gtest GTest::gmock GTest::gmock_main)
	add_test(NAME ${TGT} COMMAND ${TGT})
endfunction()

aeronet_http_test(compile-time-traits)
aeronet_http_test(http-10)
aeronet_http_test(http-additional)
aeronet_http_test(http-chunked-head)

# Compression tests
if(AERONET_ENABLE_ZLIB OR AERONET_ENABLE_ZSTD OR AERONET_ENABLE_BROTLI)
  aeronet_http_test(http-compression)
endif()
aeronet_http_test(http-connect)
aeronet_http_test(http-core)
aeronet_http_test(http-options-trace)
aeronet_http_test(http-parser-errors)
aeronet_http_test(http-query-parsing)
aeronet_http_test(http-range)
aeronet_http_test(http-request-decompression)
aeronet_http_test(http-routing)
aeronet_http_test(http-server-lifecycle)
aeronet_http_test(http-stats)
aeronet_http_test(http-streaming)

# TLS tests only compiled when OpenSSL support is enabled in the library build.
if (AERONET_ENABLE_OPENSSL)
	aeronet_http_test(http-tls-handshake http-tls-openssl-fault-injection.cpp)
	aeronet_http_test(http-tls-io)
	if(AERONET_ENABLE_HTTP2)
		aeronet_http_test(http2-tls-client)
	endif()
endif()

aeronet_http_test(http-trailers)
aeronet_http_test(http-url-decoding)
if(AERONET_ENABLE_HTTP2)
	aeronet_http_test(http2-core)
endif()
aeronet_http_test(multi-http-server)

if (AERONET_ENABLE_WEBSOCKET)
	aeronet_http_test(websocket-integration)
endif()

if(AERONET_ENABLE_OPENTELEMETRY)
	aeronet_http_test(opentelemetry-e2e)
endif()